LevelParent JDoc, SonarQube changes for code smells